funções atualizar e deletar tutoriais adicionada.

--- a/frontend/src/app/components/tutorial-details/tutorial-details.component.html
+++ b/frontend/src/app/components/tutorial-details/tutorial-details.component.html
@@ -27,5 +27,26 @@
                 {{currentTutorial.published? "Published": "Pending"}}
             </div>
         </form>
-    </div>
+        <button
+        class="badge badge-primary mr-2"
+        *ngIf="currentTutorial.published"
+        (click)="updatePublished(false)"
+        >
+        UnPublish
+        </button>
+        <button
+        class="badge badge-primary mr-2"
+        *ngIf="!currentTutorial.published"
+        (click)="updatePublished(true)"
+        >
+        Publish
+        </button>
+        <button class="badge badge-danger mr-2" (click)="deleteTutorial()">
+      Delete
+    </button>
+    <button type="submit" class="badge badge-success mb-2" (click)="updateTutorial()">
+      Update
+    </button>
+    <p>{{ message }}</p>
+  </div>
 </div>
